fixed alignment of components to be middle

--- a/lolmasterylookup/src/Components/Frontend/serverSelect.css
+++ b/lolmasterylookup/src/Components/Frontend/serverSelect.css
@@ -1,4 +1,3 @@
 #formControl {
-    min-width: 120px;
-    margin-left: 10px;
+    width: 100%;
 }
