--- a/lolmasterylookup/src/Components/Frontend/submitButton.css
+++ b/lolmasterylookup/src/Components/Frontend/submitButton.css
@@ -1,4 +1,4 @@
 #btn {
-    margin-left: 10px;
-    margin-top: 10px;
+    width: 100%;
+    margin-top: 11%;
 }
